# second-brain-kit

./: .env.example  .gitignore  README.md  config.example.yaml  eslint.config.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/devlogs/: current.md
docs/roadmap/: phase-1-mvp.md
src/: config.ts  index.ts  logger.ts
src/claude/: api-provider.ts  cli-provider.ts  index.ts  types.ts
src/second_brain_kit/: __main__.py  bot.py  claude_runner.py  cog_admin.py  cog_chat.py  cog_mcp.py  cog_vault.py  config.py  file_handler.py  installer.py  main.py  mcp_registry.py  message_splitter.py  security.py  session_store.py  vault.py
tests/: test_claude_runner.py  test_config.py  test_file_handler.py  test_installer.py  test_mcp_registry.py  test_message_splitter.py  test_security.py  test_session_store.py  test_vault.py
